fix bug with hidden page titles behind page title background in Glazed 2.6.6 release

--- a/sass/base/_page-title.scss
+++ b/sass/base/_page-title.scss
@@ -31,6 +31,7 @@
 #page-title {
   display: table;
   width: 100%;
+  z-index: 1;
   .page-title {
     border: none;
     display: table-cell;
